# docu/rest/swagger.json
@@ -18,7 +18,7 @@
     "paths": {
         "/scenario": {
             "get": {
-                "description": "This method allows to give an overview of all current scenarios.",
+                "description": "This method gives an overview of all current scenarios.",
                 "operationId": "getScenarios_",
                 "produces": [
                     "application/json"
@@ -27,7 +27,7 @@
                     {
                         "name": "filter",
                         "in": "query",
-                        "required": true,
+                        "required": false,
                         "x-is-map": false,
                         "type": "string",
                         "description": "Specifies a search. Only scenarios which\n                     name contain the specified string will be\n                     returned."
@@ -60,8 +60,20 @@
                     }
                 ],
                 "responses": {
-                    "default": {
-                        "description": "(empty response)"
+                    "201": {
+                        "description": "Successfully created scenario."
+                    },
+                    "400": {
+                        "description": "Invalid fragment XML.",
+                        "schema": {
+                            "$ref": "#/definitions/ErrorArray"
+                        }
+                    },
+                    "422": {
+                        "description": "Failed to process the scenario.",
+                        "schema": {
+                            "$ref": "#/definitions/ErrorArray"
+                        }
                     }
                 }
             }
@@ -92,7 +104,10 @@
                         }
                     },
                     "404": {
-                        "description": "There is no scenario with the given id."
+                        "description": "The scenario wasn't found.",
+                        "schema": {
+                            "$ref": "#/definitions/Error"
+                        }
                     }
                 }
             }
@@ -117,7 +132,7 @@
                     {
                         "name": "filter",
                         "in": "query",
-                        "required": true,
+                        "required": false,
                         "x-is-map": false,
                         "type": "string",
                         "description": "A Filter String, only mail tasks with a label containing\n                     this filter String will be returned."
@@ -536,7 +551,7 @@
                     {
                         "name": "filter",
                         "in": "query",
-                        "required": true,
+                        "required": false,
                         "x-is-map": false,
                         "type": "string",
                         "description": "Defines a search strings. Only activities\n                     with a label containing this String will be\n                     shown."
@@ -544,7 +559,7 @@
                     {
                         "name": "state",
                         "in": "query",
-                        "required": true,
+                        "required": false,
                         "x-is-map": false,
                         "type": "string",
                         "description": "The state of the instance."
@@ -950,7 +965,7 @@
                     {
                         "name": "filter",
                         "in": "query",
-                        "required": true,
+                        "required": false,
                         "x-is-map": false,
                         "type": "string",
                         "description": "A String which specifies a filter. Only Data\n                     Objects with a label containing this string\n                     will be returned."
@@ -1148,7 +1163,44 @@
                         }
                     },
                     "404": {
-                        "description": "There is no scenario with the given id."
+                        "description": "the scenario can't be found",
+                        "schema": {
+                            "$ref": "#/definitions/Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/scenario/{scenarioId}/xml": {
+            "get": {
+                "description": "This method provides information about the termination condition.",
+                "operationId": "getFragmentXmlStrings_",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "scenarioId",
+                        "in": "path",
+                        "required": true,
+                        "x-is-map": false,
+                        "type": "integer",
+                        "format": "int64",
+                        "description": "This id specifies the scenario. The id is the\n                   primary key inside the database."
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "The scenario's fragments as XML.",
+                        "schema": {
+                            "$ref": "#/definitions/FragmentsXML"
+                        }
+                    },
+                    "404": {
+                        "description": "the scenario can't be found",
+                        "schema": {
+                            "$ref": "#/definitions/Error"
+                        }
                     }
                 }
             }
@@ -1181,10 +1233,7 @@
                     "description": "The name which should be assigned to the entity.",
                     "type": "string"
                 }
-            },
-            "required": [
-                "name"
-            ]
+            }
         },
         "DataAttributeUpdateJaxBean": {
             "title": "DataAttributeUpdateJaxBean",
@@ -1197,11 +1246,7 @@
                 "value": {
                     "type": "string"
                 }
-            },
-            "required": [
-                "id",
-                "value"
-            ]
+            }
         },
         "ScenarioList": {
             "type": "object",
@@ -1383,18 +1428,13 @@
             "type": "object",
             "properties": {
                 "conditions": {
-                    "type": "array",
-                    "description": "The termination conditions for the scenario.",
-                    "items": {
-                        "$ref": "#/definitions/TerminationConditionList"
-                    }
+                    "$ref": "#/definitions/TerminationConditionList"
                 },
                 "setIDs": {
                     "type": "array",
                     "description": "IDs of the termination conditions.",
                     "items": {
-                        "type": "number",
-                        "format": "integer"
+                        "type": "string"
                     }
                 }
             }
@@ -1402,10 +1442,18 @@
         "TerminationConditionList": {
             "type": "object",
             "properties": {
-                "state": {
-                    "type": "string",
-                    "description": "State required for termination."
-                },
+                "(id)": {
+                    "type": "array",
+                    "description": "State required for termination.",
+                    "items": {
+                        "$ref": "#/definitions/TerminationConditionEntry"
+                    }
+                }
+            }
+        },
+        "TerminationConditionEntry": {
+            "type": "object",
+            "properties": {
                 "data_object": {
                     "type": "string",
                     "description": "Name of the associated data object."
@@ -1414,6 +1462,21 @@
                     "type": "number",
                     "format": "integer",
                     "description": "ID of the termination condition set."
+                },
+                "state": {
+                    "type": "string"
+                }
+            }
+        },
+        "FragmentsXML": {
+            "type": "object",
+            "properties": {
+                "xml": {
+                    "type": "array",
+                    "description": "List of all fragments as XML",
+                    "items": {
+                        "type": "string"
+                    }
                 }
             }
         },
@@ -1552,133 +1615,6 @@
                 "type": "string"
             }
         },
-        "Fragment": {
-            "type": "object",
-            "properties": {
-                "name": {
-                    "type": "string",
-                    "description": "The fragments name."
-                },
-                "_id": {
-                    "type": "number",
-                    "format": "integer",
-                    "description": "The fragments unique identifier."
-                },
-                "content": {
-                    "type": "string",
-                    "format": "integer",
-                    "description": "The BPMN-XML used to describe the content."
-                },
-                "revision": {
-                    "type": "number",
-                    "format": "integer",
-                    "description": "The fragments revision. Gets increased everytime the fragment is updated."
-                }
-            }
-        },
-        "FragmentStructureObject": {
-            "type": "object"
-        },
-        "DomainModel": {
-            "type": "object",
-            "required": [
-                "name",
-                "dataclasses"
-            ],
-            "properties": {
-                "name": {
-                    "type": "string",
-                    "description": "The name of the domain model."
-                },
-                "_id": {
-                    "type": "number",
-                    "format": "long",
-                    "description": "The unique identifier of the domain model."
-                },
-                "revision": {
-                    "type": "number",
-                    "format": "integer",
-                    "description": "The domain models revision. Gets increased everytime the domain model is updated."
-                },
-                "dataclasses": {
-                    "type": "array",
-                    "description": "The data classes belonging to the domain model.",
-                    "items": {
-                        "$ref": "#/definitions/DataClass"
-                    }
-                },
-                "aggregations": {
-                    "type": "array",
-                    "description": "The aggregation relationships between the data classes of this domain model.",
-                    "items": {
-                        "$ref": "#/definitions/Aggregation"
-                    }
-                }
-            }
-        },
-        "DataClass": {
-            "type": "object",
-            "properties": {
-                "name": {
-                    "type": "string",
-                    "description": "The name of the data class."
-                },
-                "_id": {
-                    "type": "number",
-                    "format": "long",
-                    "description": "The unique identifier the data class."
-                },
-                "is_event": {
-                    "type": "boolean",
-                    "description": "Describes whether the data class represents event data."
-                },
-                "attributes": {
-                    "type": "array",
-                    "description": "The attributes of the data class.",
-                    "items": {
-                        "$ref": "#/definitions/DataClassAttribute"
-                    }
-                }
-            }
-        },
-        "DataClassAttribute": {
-            "type": "object",
-            "properties": {
-                "name": {
-                    "type": "string",
-                    "description": "The name of the attribute."
-                },
-                "datatype": {
-                    "type": "string",
-                    "description": "The datatype of the attribute."
-                }
-            }
-        },
-        "Aggregation": {
-            "type": "object",
-            "properties": {
-                "sourceMultiplicity": {
-                    "type": "string",
-                    "format": "x..y",
-                    "description": "The source multiplicity of the aggregation relationship."
-                },
-                "targetMultiplicity": {
-                    "type": "string",
-                    "format": "x..y",
-                    "description": "The target multiplicity of the aggregation relationship."
-                },
-                "sourceNode": {
-                    "type": "number",
-                    "format": "long",
-                    "description": "The id of the aggregation relationship source node."
-                },
-                "targetNode": {
-                    "type": "number",
-                    "format": "long",
-                    "description": "The id of the aggregation relationship target node."
-                }
-            }
-        },
         "DataSetList": {
             "type": "array",
             "description": "All data objects found.",
@@ -1719,6 +1655,26 @@
                 "error": {
                     "type": "string",
                     "description": "Description of the error."
+                }
+            }
+        },
+        "ErrorArray": {
+            "type": "array",
+            "description": "List of errors",
+            "items": {
+                "$ref": "#/definitions/ErrorObject"
+            }
+        },
+        "ErrorObject": {
+            "type": "object",
+            "properties": {
+                "text": {
+                    "type": "string",
+                    "description": "Description of the error."
+                },
+                "type": {
+                    "type": "string",
+                    "description": "Level of the error"
                 }
             }
         },
